--- a/src/templates/.env.example
+++ b/src/templates/.env.example
@@ -7,6 +7,7 @@ CONTEXT7_API_KEY=xxxxxxxx
 BRAVE_API_KEY=xxxxxxxx
 ANTHROPIC_API_KEY=xxxxxxxx # Also used in GitHub Actions
 OPENAI_API_KEY=xxxxxxxx # (optional) but if given, should configure roo to use either claude or gpt
+FIRECRAWL_API_KEY=xxxxxxxx
 
 # GitHub Actions Secrets
 # These should also be added to your GitHub repository secrets
