--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ CONTEXT7_API_KEY=xxxxxxxx
 BRAVE_API_KEY=xxxxxxxx
 ANTHROPIC_API_KEY=xxxxxxxx
 OPENAI_API_KEY="xxxxxxxx # (optional) but if given, should configure roo to use either claude or gpt"
+FIRECRAWL_API_KEY=xxxxxxxx
