fix(ci): add node_version and package_manager inputs to release workflow
- Add node_version (required) and package_manager (optional) inputs to release.yml
- Update release.yml to pass these inputs to quality.yml instead of hardcoding
- Update Node.js setup in release.yml to use input values
- Update publish.yml and test-enhanced-release.yml to provide these inputs
- Update github-script action from v6 to v7 in create-github-issue-on-failure.yml
- Fix workflow-call input validation errors

This ensures proper parameterization of the release workflow and avoids
hardcoding environment-specific values in reusable workflows.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,12 +44,14 @@ jobs:
     needs: [determine_environment]
     with:
       environment: ${{ needs.determine_environment.outputs.environment }}
-      node_version: '20.x'
-      package_manager: 'npm'
+      release_strategy: 'semantic'
       skip_jobs: 'claude_security_scan,code_quality_check'
-    secrets:
-      PAT: ${{ secrets.PAT }}
-      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+      require_approval: false
+      require_signatures: false
+      generate_sbom: true
+      node_version: '20'
+      package_manager: 'npm'
+    secrets: inherit
 
   # Publish to npm
   publish_npm:
@@ -104,5 +106,4 @@ jobs:
     uses: ./.github/workflows/create-github-issue-on-failure.yml
     with:
       workflow_name: 'Version and Release'
-    secrets:
-      PAT: ${{ secrets.PAT }}
+    secrets: inherit
