feat(k6): add comprehensive k6 load testing workflow
- Add reusable GitHub Actions workflow for k6 performance testing
- Support 5 test scenarios: smoke, load, stress, spike, and soak
- Implement flexible configuration with environment-specific settings
- Add comprehensive test scripts and scenario configurations
- Create threshold profiles for different testing needs
- Include API testing templates and data-driven examples
- Add detailed integration and scenario selection guides
- Document troubleshooting and cost optimization strategies
- Support both local and k6 Cloud execution
- Enable authentication for protected endpoints
- Provide artifact upload for test results
- Add PR comment integration for test summaries

This workflow enables teams to easily integrate performance testing
into their CI/CD pipelines with minimal configuration required.

Closes #k6-workflow

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint:yaml": "yamllint -c .yamllint .github/workflows/*.yml || (echo 'Error: yamllint not found. Install with: brew install yamllint (macOS) or pip install yamllint' && exit 1)",
+    "lint:actions": "actionlint .github/workflows/*.yml || (echo 'Error: actionlint not found. Install with: npm install -g actionlint' && exit 1)",
+    "lint:workflows": "npm run lint:yaml && npm run lint:actions",
+    "lint:workflows:install": "echo 'Installing workflow linting tools...' && brew install yamllint 2>/dev/null || pip install yamllint && npm install -g actionlint",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
     "typecheck": "tsc --noEmit",
