feat(hooks): add automatic Jira key detection to commit messages
- Enhanced commit-msg hook to auto-append Jira keys from branch names
- Added configurable JIRA_PROJECT_KEY environment variable support
- Created comprehensive ENVIRONMENT_VARS.md documentation
- Updated .env.example with Jira configuration examples
- Added Jira integration section to hooks documentation
- Supports various branch formats (feat/SE-123, PROJ-456, etc.)

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,17 @@ BRAVE_API_KEY=xxxxxxxx
 ANTHROPIC_API_KEY=xxxxxxxx
 OPENAI_API_KEY="xxxxxxxx # (optional) but if given, should configure roo to use either claude or gpt"
 FIRECRAWL_API_KEY=xxxxxxxx
+
+# Jira Integration Configuration
+# Define your Jira project key pattern(s)
+# This is used by the commit-msg hook to auto-append Jira keys to commit messages
+# 
+# Examples:
+# Single project key:
+# JIRA_PROJECT_KEY="SE"
+#
+# Multiple project keys (using regex OR):
+# JIRA_PROJECT_KEY="SE|PROJ|ABC"
+#
+# Default pattern (matches any 2-10 uppercase letters):
+# JIRA_PROJECT_KEY="[A-Z]{2,10}"
