--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,39 @@
-GITHUB_PERSONAL_ACCESS_TOKEN=xxxxxxxx
-CONTEXT7_API_KEY=xxxxxxxx
-BRAVE_API_KEY=xxxxxxxx
-ANTHROPIC_API_KEY=xxxxxxxx
-OPENAI_API_KEY="xxxxxxxx # (optional) but if given, should configure roo to use either claude or gpt"
-FIRECRAWL_API_KEY=xxxxxxxx
+# Core API Keys
+# ===============
+
+# GitHub Personal Access Token (Required)
+# Used for: Repository operations, API access
+# Create at: https://github.com/settings/tokens
+GITHUB_PERSONAL_ACCESS_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxx
+
+# Anthropic Claude API Key (Optional)
+# Used for: AI-powered features in your development workflow
+# Enables: Claude AI code review, security scanning, and other AI features
+# Get from: https://console.anthropic.com/account/keys
+ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxx
+
+# Optional API Keys
+# =================
+
+# Context7 API Key (Optional)
+# Used for: Enhanced documentation lookup and context retrieval
+CONTEXT7_API_KEY=your-context7-key
+
+# Brave Search API Key (Optional)
+# Used for: Web search capabilities
+# Get from: https://api.search.brave.com/app/keys
+BRAVE_API_KEY=your-brave-key
+
+# OpenAI API Key (Optional)
+# Used for: Alternative AI provider support
+# Note: If provided, configure Roo to use either Claude or GPT
+# Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxx
+
+# Firecrawl API Key (Optional)
+# Used for: Advanced web scraping and content extraction
+# Get from: https://www.firecrawl.dev/app/api-keys
+FIRECRAWL_API_KEY=your-firecrawl-key
 
 # Jira Integration Configuration
 # Define your Jira project key pattern(s)
